[gd_scene load_steps=3 format=3 uid="uid://b224jou4wqp13"]

[ext_resource type="PackedScene" uid="uid://ds1ot8wjbmotw" path="res://scenes/GUI/main_game/weather/gui_weather.tscn" id="1_sy5x8"]
[ext_resource type="Script" uid="uid://muil45dtdj1g" path="res://scenes/GUI/main_game/weather/gui_weather_container.gd" id="1_xcomh"]

[node name="GUIWeatherContainer" type="HBoxContainer"]
offset_right = 20.0
offset_bottom = 16.0
script = ExtResource("1_xcomh")

[node name="TodayWeatherIcon" parent="." instance=ExtResource("1_sy5x8")]
unique_name_in_owner = true
layout_mode = 2

[node name="ForcastContainer" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
